# acronym-cli

./: README.md  pyproject.toml
acronym/: cli.py
acronym_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
